tests/paczka2/big_fuzzy/94891282.err
Error in line 11: OVmh3aJaxa1 S443 38,3
Error in line 21: ZhY82UEzOM A794 K3,5
Error in line 22: ixhN1yP5 S663 74,5
Error in line 20: p8QYrMzH A794 25,8
Error in line 27: ixhN1yP5 A826 21,2
Error in line 31: p8QYrMzH S443 -5,5
Error in line 30: ixhN1yP5 S443 57,1
Error in line 40: Ch47EUs A794 88,4
Error in line 36: OVmh3aJaxa1 S663 76,6
Error in line 16: ZhY82UEzOM A794 55,2
Error in line 28: p8QYrMzH S443 89,1
Error in line 50: Ch47EUs S443 -3,96
Error in line 42: Ch47EUs S443 80,4
Error in line 68: Ch47EUs A794 45,4
Error in line 80: ixhN1yP5 S663 51,48
Error in line 81: ixhN1yP5 S443 36,2
Error in line 83: IKXuEBDvrwb S443 61,7
Error in line 86: p8QYrMzH A826 31,6
Error in line 72: A826 S443 0,9
Error in line 98: OVmh3aJaxa1 A826 6,6
Error in line 109: ZhY82UEzOM S663 92,1
Error in line 102: IKXuEBDvrwb S663 47,3
Error in line 74: Ch47EUs S663 0,3
Error in line 116: p8QYrMzH S663 46,8
Error in line 142: A826 A794 103,45
Error in line 138: OVmh3aJaxa1 A794 299,0
Error in line 143: Ch47EUs S443 8,1
Error in line 140: IKXuEBDvrwb A826 71,8
Error in line 151: ZhY82UEzOM S443 36,0
Error in line 159: ixhN1yP5 A794 63,7
Error in line 157: ZhY82UEzOM A794 12,9
Error in line 163: A826 A794 33,2
Error in line 178: OVmh3aJaxa1 S663 79,5
Error in line 181: OVmh3aJaxa1 S443 7,9
Error in line 183: OVmh3aJaxa1 A826 65,9
Error in line 184: OVmh3aJaxa1 S663 7,8
Error in line 193: OVmh3aJaxa1 A826 5,7
Error in line 203: ZhY82UEzOM A794 60,05
Error in line 197: A826 A794 51,8
Error in line 206: p8QYrMzH A826 78,6
Error in line 205: OVmh3aJaxa1 A794 31,9
Error in line 224: p8QYrMzH A794 52,4
Error in line 227: OVmh3aJaxa1 S443 92,4
Error in line 229: OVmh3aJaxa1 S663 21,8
Error in line 233: Ch47EUs S663 57,0
Error in line 237: Ch47EUs A826 46,7
Error in line 249: OVmh3aJaxa1 A826 -1,2
